# adventofcode

./: .pylintrc  1.hs  2.hs  README.md
2015/Haskell/: 1.hs  2.hs  3.hs
2017/Python/: 1.py  2.py  20.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2018/C#/1/: Program.cs
2018/C++/: .gitignore  1  1.cpp  11.cpp  Makefile  README.md
2018/Haskell/: 1.hs  2.hs
2018/PHP/: 5.php
2018/Perl/: 1_1.pl  1_2.pl  5.pl
2018/Python/: 10.py  11.py  12.py  13.py  14.py  16.py  1_1.py  1_2.py  2_1.py  2_2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  opcodes.py
2019/C#/1/: 1.csproj  Program.cs
2019/Node JS/: .prettierrc  2.js  3.js  4.js  5.js
2019/Python/: 1.py
2020/Node JS/: 1.js  2.js
2021/Python/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  2.py  20.py  24.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  pyproject.toml  run_checks.sh
2022/Python/: 1.py
2024/Python/: 1.py  2.py  3.py
