[tool.poetry]
name = "adventofcode2021"
version = "0.1.0"
description = "Advent of Code 2021 implementations"
authors = ["hckr"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
